--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   </head>
   <body>
     <header></header>
-    <main><h1>Temtem</h1></main>
+    <main>
+      <a href="#" class="btn-lg">testando</a>
+      <a href="#" class="btn-sm">testando</a>
+    </main>
     <!-- Script -->
     <script src="./js/app.js"></script>
   </body>
