--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
     />
   </head>
   <body>
-    <header></header>
-    <main>
-      <a href="#" class="btn-lg">testando</a>
-      <a href="#" class="btn-sm">testando</a>
-    </main>
+    <header class="menu-header">
+      <a href="#"
+        ><img src="./assets/temtem.png" alt="Temtem" class="logo"
+      /></a>
+
+      <nav>
+        <ul>
+          <a href="#"><li>Types</li></a>
+          <a href="#"><li>Matchups</li></a>
+          <a href="#"><li>Tempedia</li></a>
+        </ul>
+      </nav>
+
+      <a href="#" class="btn-lg buy">Buy Now</a>
+    </header>
+    <main></main>
     <!-- Script -->
     <script src="./js/app.js"></script>
   </body>
