--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             alt=""
           />
 
-          <form action="" onsubmit="searchTemtem(event)">
+          <form>
             <label for="temtemSearch">Search Temtem</label>
             <input
               type="text"
@@ -61,6 +61,19 @@
             />
             <button class="btn-sm">Search</button>
           </form>
+
+          <div class="temtem-card">
+            <div class="temtem-portrait">
+              <span class="portrait-bg">
+                <img
+                  src="https://temtem-api.mael.tech/images/portraits/temtem/large/Ganki.png
+                "
+                  alt=""
+                />
+              </span>
+            </div>
+            <h2 id="temtemName">Ganki</h2>
+          </div>
         </div>
       </section>
     </main>
