trocar imagem em nome de acordo com a busca

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
               id="temtemSearch"
               autocomplete="off"
             />
-            <button class="btn-sm">Search</button>
+            <button class="btn-sm" id="searchButton" type="button">
+              Search
+            </button>
           </form>
 
           <div class="temtem-card">
@@ -67,7 +69,7 @@
               <img
                 src="https://temtem-api.mael.tech/images/portraits/temtem/large/Ganki.png
                 "
-                alt=""
+                id="temtemImg"
               />
               <h2 id="temtemName">Ganki</h2>
             </div>
