--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="tempedia">
         <div class="title">
           <h1>Tempedia</h1>
-          <p>Search Temtems by name or number</p>
+          <p>Temtems details</p>
         </div>
         <div class="tempedia-container">
           <img
@@ -67,7 +67,9 @@
             </button>
           </form>
           <p id="errorSearch"></p>
-
+          <div class="tempedia-text active">
+            <h1>SEARCH TEMTEMS BY NAME OR NUMBER</h1>
+          </div>
           <div class="temtem-card">
             <div class="temtem-portrait">
               <img
