--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
               />
               <h2 id="temtemName">Ganki</h2>
             </div>
+            <div class="temtem-infos">
+              <p id="description">Description:</p>
+              <p id="types">Types:</p>
+            </div>
           </div>
         </div>
       </section>
