pega imagens dos types

--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
               <h2 id="temtemName">Ganki</h2>
             </div>
             <div class="temtem-infos">
+              <p id="temtemId"></p>
               <p id="description">Description:</p>
-              <p id="types">Types:</p>
+              <div class="types">
+                <img src="" id="type1" />
+                <img src="" id="type2" />
+              </div>
             </div>
           </div>
         </div>
