--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <p id="temtemId"></p>
               <p id="description">Description:</p>
               <div class="types">
+                <p>Types:</p>
                 <img src="" id="type1" />
                 <img src="" id="type2" />
               </div>
