--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- Script -->
-    <script src="./js/app.js" tyo="text/javascript" defer></script>
+    <script src="./js/app.js" type="module" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -82,10 +82,9 @@
             <div class="temtem-infos">
               <p id="temtemId"></p>
               <p id="description">Description:</p>
-              <div class="types">
+              <div class="type-content">
                 <p>Types:</p>
-                <img src="" id="type1" />
-                <img src="" id="type2" />
+                <div class="types-img"></div>
               </div>
             </div>
           </div>
