--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             alt=""
           />
 
-          <form onSubmit="searchTemtem(event)">
+          <form onSubmit="event.preventDefault()">
             <label for="temtemSearch">Search Temtem</label>
             <input
               type="text"
