busca quando apertar enter no input

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             alt=""
           />
 
-          <form onSubmit="event.preventDefault()">
+          <form>
             <label for="temtemSearch">Search Temtem</label>
             <input
               type="text"
