--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <p>Types:</p>
                 <div class="types-img"></div>
               </div>
+              <div class="traits-content"></div>
             </div>
           </div>
         </div>
