--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
           </div>
           <div class="temtem-card">
             <div class="temtem-portrait">
-              <img
-                src="https://temtem-api.mael.tech/images/portraits/temtem/large/Ganki.png
-                "
-                id="temtemImg"
-              />
+              <img src="" id="temtemImg" onerror="null" />
               <h2 id="temtemName">Ganki</h2>
             </div>
             <div class="temtem-infos">
