--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <p>Types:</p>
                 <div class="types-img"></div>
               </div>
+              <div class="traits-title"><h1>Traits</h1></div>
               <div class="traits-content"></div>
             </div>
           </div>
