--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
             </div>
           </div>
 
+          <seaction class="matchups">
+            <h1>Matchups</h1>
+            <h2>Damage</h2>
+            <div class="damage-content">
+              <ul id="matchup1"></ul>
+              <ul id="matchup2"></ul>
+            </div>
+          </seaction>
+
           <img
             class="img-bottom"
             src="http://sm.ign.com/ign_br/screenshot/default/a1d981f918316cd0430c91a2b9078208-original_t4fe.png"
