--- a/index.html
+++ b/index.html
@@ -82,11 +82,19 @@
           </div>
 
           <seaction class="matchups">
-            <h1>Matchups</h1>
-            <h2>Damage</h2>
+            <div class="matchups-titles">
+              <h1>Matchups</h1>
+              <h2>Damage</h2>
+            </div>
             <div class="damage-content">
               <ul id="matchup1"></ul>
               <ul id="matchup2"></ul>
+            </div>
+
+            <h2 class="weaknesse-title">most weaknesse</h2>
+            <div class="damage-content">
+              <ul id="weakness1"></ul>
+              <ul id="weakness2"></ul>
             </div>
           </seaction>
 
