--- a/index.html
+++ b/index.html
@@ -107,7 +107,14 @@
       </section>
     </main>
     <footer>
-      <p>Developed by <a href="" target="_blank">Eduardo Aguiar</a></p>
+      <p>
+        Developed by
+        <a href="https://github.com/EduardoAguiarS/Tempidia" target="_blank"
+          >Eduardo Aguiar</a
+        >
+        / API powered by
+        <a href="https://temtem-api.mael.tech/" target="_blank">Maael</a>
+      </p>
     </footer>
   </body>
 </html>
