--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
               <ul id="weakness1"></ul>
               <ul id="weakness2"></ul>
             </div>
+            <a href="#" target="_blank" id="mostInfos"
+              ><h2>Most infos here!</h2></a
+            >
           </seaction>
 
           <img
