--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <ul id="matchup2"></ul>
             </div>
 
-            <h2 class="weaknesse-title">weaknesse</h2>
+            <h2 class="weaknesse-title">weakness</h2>
             <div class="damage-content">
               <ul id="weakness1"></ul>
               <ul id="weakness2"></ul>
