--- a/index.html
+++ b/index.html
@@ -84,20 +84,13 @@
           <seaction class="matchups">
             <div class="matchups-titles">
               <h1>Matchups</h1>
-              <h2>Damage</h2>
             </div>
-            <div class="damage-content">
-              <ul id="matchup1"></ul>
-              <ul id="matchup2"></ul>
-            </div>
-
             <h2 class="weaknesse-title">weakness</h2>
             <div class="damage-content">
               <ul id="weakness1"></ul>
-              <ul id="weakness2"></ul>
             </div>
-            <a href="#" target="_blank" id="mostInfos"
-              ><h2>Most infos here!</h2></a
+            <a href="#" target="_blank" id="mostInfos" class="btn-lg"
+              >Most infos here!</a
             >
           </seaction>
 
